Switch to cookie based refresh tokens
- token endpoint used with credentials (user & pass) or by refresh token cookie
- automatic rotation of refresh tokens, they are only good for a single refresh after which their reuse will invalidate whole family
- add ConfigurationProperties class instead of reading settings straight from properties
- entity timestamps
