# gen/api.yml
@@ -1,9 +1,9 @@
 openapi: 3.0.3
 info:
   title: Packlister API
-  description: |-
-    Packlister server API specification in OpenAPI 3.0 format. Used within this project for autogenerating
-    Java Spring controllers code for the API level implementation..
+  description: >-
+    Packlister server API specification in OpenAPI 3.0 format. Used within this project for generating Java Spring 
+    controller code for the API level implementation.
   version: 1.0.0
 servers:
   - url: /api
@@ -11,14 +11,15 @@ tags:
   - name: packlists
     description: Operations for handling packlists
   - name: items
-    description: Operations for handling user items. Packlist items (user items referred within the packlist) are handled within packlist operations.
+    description: >-
+      Operations for handling user items. Packlist items (user items referred within the packlist) are handled within 
+      packlist operations.
   - name: auth
     description: User registration and login
 paths:
   /items:
     get:
-      tags:
-        - items
+      tags: [items]
       summary: Get authenticated user's user items.
       description: Get authenticated user's user items.
       operationId: getItems
@@ -29,8 +30,7 @@ paths:
           $ref: '#/components/responses/ErrorResponse'
   /items/batch:
     put:
-      tags:
-        - items
+      tags: [items]
       summary: Update or create multiple user items
       description: Update or create multiple user items
       operationId: upsertItems
@@ -43,8 +43,7 @@ paths:
           $ref: '#/components/responses/UserItemsResponse'
   /items/batchDelete:
     post:
-      tags:
-        - items
+      tags: [items]
       summary: Delete multiple user items
       description: Delete multiple user items. Failed requests do not delete any of the items.
       operationId: deleteItems
@@ -110,10 +109,9 @@ paths:
           $ref: '#/components/responses/ErrorResponse'
   /auth/register:
     post:
-      tags:
-        - auth
+      tags: [auth]
       summary: Register user
-      description: Register user
+      description: Register user. Response same as `/auth/token` endpoint.
       operationId: register
       requestBody:
         description: User registration object
@@ -124,11 +122,54 @@ paths:
               $ref: '#/components/schemas/UserRegistration'
       responses:
         '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
+          $ref: '#/components/responses/TokenResponse'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+  /auth/token:
+    post:
+      tags: [auth]
+      summary: Get JWT tokens
+      description: >-
+        Get tokens by providing user credentials, or a refresh token as a cookie. Response also has user information. 
+        Response will also set a refresh token cookie that can be used once to request new access and refresh tokens. 
+        If both credentials and refresh token are present in the request, credentials will be used and refresh token 
+        ignored.
+      operationId: token
+      parameters:
+        - in: cookie
+          name: refresh_token
+          schema:
+            type: string
+      requestBody:
+        description: Credentials object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserCredentials'
+      responses:
+        '200':
+          $ref: '#/components/responses/TokenResponse'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+  /auth/logout:
+    post:
+      tags: [auth]
+      summary: Logout user by invaliding user's current refresh token
+      description: |-
+        Invalidate user's current refresh token. Access tokens are not invalidated. The valid refresh token must be 
+        provided as cookie to authenticate user.
+        
+        Note that this does not invalidate ALL possible refresh tokens for current user!
+      operationId: logout
+      parameters:
+        - in: cookie
+          name: refresh_token
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Logged out successfully
         default:
           $ref: '#/components/responses/ErrorResponse'
 components:
@@ -254,6 +295,27 @@ components:
         - username
         - email
         - password
+    UserCredentials:
+      type: object
+      properties:
+        username:
+          $ref: '#/components/schemas/Username'
+        password:
+          $ref: '#/components/schemas/Password'
+      required:
+        - username
+        - password
+    Token:
+      type: string
+      description: JWT token
+      example: xxxxx.yyyyy.zzzzz
+    TokenResponse:
+      type: object
+      properties:
+        accessToken:
+          $ref: '#/components/schemas/Token'
+        user:
+          $ref: '#/components/schemas/User'
     APIError:
       type: object
       properties:
@@ -335,6 +397,18 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Packlist'
+    TokenResponse:
+      description: |
+        Token response containing an access token and user info. Also sets HttpOnly `refresh_token` cookie.
+      headers:
+        Set-Cookie:
+          schema:
+            type: string
+            example: refresh_token=xxxxx.yyyyy.zzzzz; Path=/api/auth; Secure; HttpOnly
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/TokenResponse'
     ErrorResponse:
       description: Generic error response containing an array of errors
       content:
