# svc/src/main/kotlin/net/packlister/packlister/svc/model/UserToken.kt
@@ -1,7 +1,0 @@
-package net.packlister.packlister.svc.model
-
-data class UserToken(
-    val token: String,
-    val username: String,
-    val email: String
-)
